changed order of sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#1D4ED8" />
 
-  <meta property="og:title" content="Dakherstellingen & Dakreiniging door Dakherstellingen LM | Dé 5-sterren Service in Leuven" />
+  <meta property="og:title"
+    content="Dakherstellingen & Dakreiniging door Dakherstellingen LM | Dé 5-sterren Service in Leuven" />
   <meta property="og:description"
     content="Snel herstel bij lekkages of een grondige dakreiniging? Vertrouw op Dakherstellingen LM, het familiebedrijf met jarenlange expertise. Vraag uw gratis offerte aan!" />
   <meta property="og:type" content="website" />
@@ -22,7 +23,8 @@
   <meta property="og:site_name" content="Dakherstellingen LM" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Dakherstellingen & Dakreiniging door Dakherstellingen LM | Dé 5-sterren Service in Leuven" />
+  <meta name="twitter:title"
+    content="Dakherstellingen & Dakreiniging door Dakherstellingen LM | Dé 5-sterren Service in Leuven" />
   <meta name="twitter:description"
     content="Vader en zoon zorgen persoonlijk voor uw dakonderhoud, herstelling en reiniging in Leuven en omstreken. Betrouwbaar en lokaal vakmanschap." />
   <meta name="twitter:image" content="https://dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
@@ -43,7 +45,7 @@
 
   <link rel="canonical" href="https://dakherstellingenlm.be/">
 
-  <title>Dakreiniging LM | DakherstellingenLM</title>
+  <title>Dakherstellingen LM | Dakreiniging LM</title>
 
   <script src="https://www.google.com/recaptcha/api.js?render=6LepJJsrAAAAAJd8sFU5DexBd0aQzQwHsMtzO5_U" async
     defer></script>
@@ -216,10 +218,10 @@
       <div class="relative h-full flex items-center justify-center md:ml-6 px-6 sm:px-24 z-10">
         <div class="bg-white/60 backdrop-blur-sm p-6 sm:p-10 rounded-lg shadow-lg max-w-2xl">
           <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-blue-900 mb-4 text-center md:leading-12">
-            Uw dakspecialist voor reiniging en herstellingen
+            Uw dakspecialist voor herstellingen en reiniging
           </h1>
-          <h2 class="text-lg md:text-2xl text-blue-800 font-medium mb-8 text-center">
-            Voor het reinigen, herstellen en onderhouden van alle types daken
+          <h2 class="text-lg md:text-xl text-blue-800 font-medium mb-8 text-center">
+            Voor het reinigen, herstellen en onderhouden van alle types daken, met 24/7 noodhulp.
           </h2>
           <p class="text-md sm:text-xl md:text-2xl text-blue-800 text-center">
             <span class="block md:inline"><i class="fas fa-phone mr-2"></i>
@@ -242,51 +244,6 @@
         </div>
       </div>
     </section>
-
-    <section id="over-ons" class="bg-white py-16 sm:py-24 px-6">
-      <div class="max-w-7xl mx-auto">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-center">
-          <div>
-            <h2 class="text-3xl sm:text-4xl font-bold text-blue-900 mb-6">Wie zijn wij?</h2>
-            <div class="text-lg text-gray-700 grid gap-y-3 leading-relaxed">
-              <p>
-                Dakwerken LM is een echt familiebedrijf, geleid door vader Philippe en zoon Lander. Met jarenlange
-                ervaring en een passie voor vakmanschap staan wij dagelijks samen op de werf. Wij helpen onze klanten
-                met
-                zorg, kwaliteit en vertrouwen.
-              </p>
-              <p>
-                Heldere communicatie, correcte afspraken en duurzame oplossingen vormen de kern van onze werking. Of het
-                nu gaat om dakherstellingen, dakreiniging of regelmatig onderhoud: bij Dakwerken LM is uw dak in ervaren
-                en betrouwbare handen. Wij zijn trots om de regio Groot-Leuven en omliggende gemeenten te bedienen met
-                onze expertise.
-              </p>
-              <p>
-                Als vader en zoon zijn wij gespecialiseerd in het opsporen en herstellen van zowel kleine als grote
-                lekkages &dash; op platte én hellende daken. Alle herstellingen worden door ons persoonlijk uitgevoerd,
-                zonder tussenpersonen. In veel gevallen is een herstelling een slimme en voordelige keuze. Het is vaak
-                aanzienlijk goedkoper dan een volledige vernieuwing van uw dak, en kan de levensduur met vele jaren
-                verlengen.
-              </p>
-            </div>
-          </div>
-          <div class="grid grid-cols-2 gap-4">
-            <img src="assets/img/over_ons/actie.webp?v=20250714" alt="Dakwerken in actie" width="400" height="300"
-              loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/auto_logo.webp?v=20250714" alt="Lander aan het klaarmaken voor dakreiniging"
-              width="400" height="300" loading="lazy" decoding="async"
-              class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/herstelling.webp?v=20250714" alt="Philippe voert een dakherstelling uit"
-              width="400" height="533" loading="lazy" decoding="async"
-              class="rounded-lg shadow-md object-cover aspect-[4/3]">
-            <img src="assets/img/over_ons/dakgoot.webp?v=20250714" alt="Dakreiniging en onderhoud" width="400"
-              height="300" loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
-          </div>
-        </div>
-      </div>
-    </section>
-
-
 
     <section id="diensten" class="py-24 relative min-h-screen bg-cover bg-top bg-fixed md:px-12"
       style="background-image: url('assets/img/dak_reiniging_sub.webp?v=20250722');">
@@ -338,6 +295,49 @@
               </p>
             </div>
           </a>
+        </div>
+      </div>
+    </section>
+
+    <section id="over-ons" class="bg-white py-16 sm:py-24 px-6">
+      <div class="max-w-7xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 items-center">
+          <div>
+            <h2 class="text-3xl sm:text-4xl font-bold text-blue-900 mb-6">Wie zijn wij?</h2>
+            <div class="text-lg text-gray-700 grid gap-y-3 leading-relaxed">
+              <p>
+                Dakwerken LM is een echt familiebedrijf, geleid door vader Philippe en zoon Lander. Met jarenlange
+                ervaring en een passie voor vakmanschap staan wij dagelijks samen op de werf. Wij helpen onze klanten
+                met
+                zorg, kwaliteit en vertrouwen.
+              </p>
+              <p>
+                Heldere communicatie, correcte afspraken en duurzame oplossingen vormen de kern van onze werking. Of het
+                nu gaat om dakherstellingen, dakreiniging of regelmatig onderhoud: bij Dakwerken LM is uw dak in ervaren
+                en betrouwbare handen. Wij zijn trots om de regio Groot-Leuven en omliggende gemeenten te bedienen met
+                onze expertise.
+              </p>
+              <p>
+                Als vader en zoon zijn wij gespecialiseerd in het opsporen en herstellen van zowel kleine als grote
+                lekkages &dash; op platte én hellende daken. Alle herstellingen worden door ons persoonlijk uitgevoerd,
+                zonder tussenpersonen. In veel gevallen is een herstelling een slimme en voordelige keuze. Het is vaak
+                aanzienlijk goedkoper dan een volledige vernieuwing van uw dak, en kan de levensduur met vele jaren
+                verlengen.
+              </p>
+            </div>
+          </div>
+          <div class="grid grid-cols-2 gap-4">
+            <img src="assets/img/over_ons/actie.webp?v=20250714" alt="Dakwerken in actie" width="400" height="300"
+              loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/auto_logo.webp?v=20250714" alt="Lander aan het klaarmaken voor dakreiniging"
+              width="400" height="300" loading="lazy" decoding="async"
+              class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/herstelling.webp?v=20250714" alt="Philippe voert een dakherstelling uit"
+              width="400" height="533" loading="lazy" decoding="async"
+              class="rounded-lg shadow-md object-cover aspect-[4/3]">
+            <img src="assets/img/over_ons/dakgoot.webp?v=20250714" alt="Dakreiniging en onderhoud" width="400"
+              height="300" loading="lazy" decoding="async" class="rounded-lg shadow-md object-cover aspect-[4/3]">
+          </div>
         </div>
       </div>
     </section>
