--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
       <div class="relative h-full flex items-center justify-center md:ml-6 px-6 sm:px-24 z-10">
         <div class="bg-white/60 backdrop-blur-sm p-6 sm:p-10 rounded-lg shadow-lg max-w-2xl">
           <h1 class="text-2xl sm:text-3xl md:text-4xl font-bold text-blue-900 mb-4 text-center md:leading-12">
-            Uw dakspecialist voor herstellingen en reiniging
+            Uw dakspecialist voor herstellingen
           </h1>
-          <h2 class="text-lg md:text-xl text-blue-800 font-medium mb-8 text-center">
-            Voor het reinigen, herstellen en onderhouden van alle types daken, met 24/7 noodhulp.
+          <h2 class="text-lg md:text-2xl text-blue-800 font-medium mb-8 text-center">
+            Van alle types daken, met 24/7 noodhulp
           </h2>
           <p class="text-md sm:text-xl md:text-2xl text-blue-800 text-center">
             <span class="block md:inline"><i class="fas fa-phone mr-2"></i>
