--- a/index.html
+++ b/index.html
@@ -208,11 +208,9 @@
     <section id="home" class="relative h-screen bg-cover bg-fixed overflow-hidden">
       <div class="absolute inset-0 bg-white/20 z-0"></div>
 
-      <div id="carousel-reiniging"
-        class="absolute inset-0 z-[-2] transform scale-[1.1] bg-cover bg-top bg-fixed transition-opacity duration-1000 ease-in-out">
-      </div>
-      <div id="carousel-herstelling"
-        class="absolute inset-0 z-[-1] transform scale-[1.1] bg-cover bg-top bg-fixed transition-opacity duration-1000 ease-in-out">
+      <div
+        class="absolute inset-0 z-[-1] transform scale-[1.1] bg-cover bg-top bg-fixed transition-opacity duration-1000 ease-in-out"
+        style="background-image: url('assets/img/dak_herstelling.webp');">
       </div>
 
       <div class="relative h-full flex items-center justify-center md:ml-6 px-6 sm:px-24 z-10">
@@ -596,7 +594,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jsencrypt/bin/jsencrypt.min.js"></script>
 
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
-  <script src="/assets/js/bundle.js?v=20250916-4" defer></script>
+  <script src="/assets/js/bundle.js" defer></script>
 
   <script type="application/ld+json">
 [
