--- a/diensten/dakreiniging-ontmossen.html
+++ b/diensten/dakreiniging-ontmossen.html
@@ -6,29 +6,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Professionele dakreiniging & ontmossen door Dakreiniging LM in Herentals. Verwijder mos, algen en vuil van hellende en platte daken voor een langere levensduur. Vraag uw offerte aan!" />
+    content="Professionele dakreiniging & ontmossen door Dakherstellingen LM in Herentals en Leuven. Verwijder mos, algen en hardnekkig vuil van hellende en platte daken. Vraag uw gratis offerte aan!" />
   <meta name="keywords"
-    content="dakreiniging, ontmossen, dak reinigen, mos dak, algen dak, dak coaten, dak impregneren, dakgoot reinigen, Herentals, Leuven" />
+    content="dakreiniging, ontmossen, dak reinigen, mos dak verwijderen, algen dak behandelen, dak coaten, dak impregneren, dakgoot reinigen, Herentals, Leuven, Groot-Leuven" />
   <meta name="author" content="Dakherstellingen LM" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#1D4ED8" />
 
 
-  <meta property="og:title" content="Dakreiniging & Ontmossen | Dakherstellingen LM" />
+  <meta property="og:title" content="Dakreiniging & Ontmossen Service | Dakherstellingen LM" />
   <meta property="og:description"
     content="Specialist in dakreiniging, ontmossen en coaten van daken in de regio Herentals en Leuven. Vraag een gratis offerte aan." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.dakherstellingenlm.be/dakreiniging-ontmossen.html" />
   <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
   <meta property="og:site_name" content="Dakherstellingen LM" />
+  <meta property="og:locale" content="nl_BE" />
+
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Dakreiniging & Ontmossen | Dakherstellingen LM" />
   <meta name="twitter:description"
     content="Laat uw dak professioneel reinigen en ontmossen. Verleng de levensduur van uw dak met onze milieuvriendelijke aanpak." />
   <meta name="twitter:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
-
-  <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
+  <meta name="twitter:creator" content="@DakwerkenLM" /> <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
@@ -37,9 +38,9 @@
 
   <link rel="stylesheet" href="/assets/css/output.css?v=20250724">
 
-  <link rel="canonical" href="https://www.dakherstellingenlm.be/dakreiniging-ontmossen.html">
+  <link rel="canonical" href="https://www.dakherstellingenlm.be/diensten/dakreiniging-ontmossen.html">
 
-  <title>Dakreiniging & Ontmossen | Professionele Dakreiniging | Dakherstellingen LM</title>
+  <title>Professionele Dakreiniging & Ontmossen | Dakherstellingen LM Herentals/Leuven</title>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6ZMGVS5NW"></script>
   <script>
@@ -112,9 +113,9 @@
             </li>
             <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
               <a href="/diensten/dakreiniging-ontmossen.html" class="group relative inline-block pb-1 w-full">
-                <span class="group-hover:text-blue-900 transition">Dakreiniging & Ontmossen</span>
+                <span class="group-hover:text-blue-900 transition font-semibold" aria-current="page">Dakreiniging & Ontmossen</span>
                 <span
-                  class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
+                  class="absolute left-0 bottom-0 h-0.5 w-full bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
               </a>
             </li>
           </ul>
@@ -143,20 +144,18 @@
       style="background-image: url('/assets/img/banner/ontmossen.webp?v=20250714');">
       <div class="absolute inset-0 bg-black/50 flex items-center justify-center">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold text-white text-center drop-shadow-lg pt-24 md:pt-0">
-          Dakreiniging &
-          Ontmossen</h1>
-      </div>
+          Professionele Dakreiniging &
+          Ontmossen</h1> </div>
     </section>
 
     <section class="py-16 sm:py-24 px-6 bg-white">
       <div class="max-w-4xl mx-auto">
         <div class="space-y-6 text-gray-800 leading-relaxed">
           <p class="text-lg">
-            Een schoon dak is essentieel voor de levensduur en uitstraling van uw woning. Mos, algen en vuil zorgen niet
+            Een schoon dak is cruciaal voor de levensduur en uitstraling van uw woning. Mos, algen en vuil zorgen niet
             alleen voor een onverzorgde look, maar kunnen ook blijvende schade veroorzaken aan uw dakbedekking en
             structuur. Denk hierbij aan vochtproblemen, verzwakte materialen en zelfs lekkages.
-          </p>
-          <p class="text-lg">
+          </p> <p class="text-lg">
             Bij Dakreiniging LM, uw betrouwbare partner in de regio Herentals en Groot-Leuven, bieden we grondige
             dakreiniging en ontmossing aan. Dit doen we voor zowel hellende daken (pannen, leien) als platte
             daken (roofing, EPDM, PVC). We werken met zorg voor uw dak én het milieu, en zorgen dat uw dak weer
@@ -164,9 +163,8 @@
           </p>
 
           <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-            <i class="fas fa-wrench text-blue-700"></i> Onze Aanpak voor Dakreiniging & Ontmossen
-          </h2>
-          <p class="text-lg">
+            <i class="fas fa-wrench text-blue-700"></i> Onze Zorgvuldige Aanpak voor Dakreiniging & Ontmossen
+          </h2> <p class="text-lg">
             Ons proces is zorgvuldig en efficiënt, ontworpen om uw dak grondig te reinigen en te beschermen, stap voor
             stap:
           </p>
@@ -175,8 +173,7 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">1.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Grondige Inspectie</h3>
-                  <p>We starten altijd met een gedetailleerde inspectie van uw dak om de staat van de dakbedekking vast
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Grondige Inspectie van uw Dak</h3> <p>We starten altijd met een gedetailleerde inspectie van uw dak om de staat van de dakbedekking vast
                     te stellen en eventuele beschadigingen of zwakke plekken te identificeren voordat we beginnen met
                     reinigen. Zo garanderen we een veilige en effectieve aanpak op maat.</p>
                 </div>
@@ -186,8 +183,7 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">2.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Verwijderen van Mos, Algen en Vuil</h3>
-                  <p>Met professionele apparatuur en aangepaste technieken verwijderen we alle ongewenste begroeiing en
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Verwijderen van Mos, Algen en Hardnekkig Vuil</h3> <p>Met professionele apparatuur en aangepaste technieken verwijderen we alle ongewenste begroeiing en
                     vuil van uw dak. Dit gebeurt op een veilige manier die uw dakbedekking niet beschadigt, voor een
                     direct zichtbaar schoner resultaat.</p>
                 </div>
@@ -208,8 +204,7 @@
               <div class="flex items-start">
                 <div class="flex-shrink-0 mr-4 text-blue-700 text-3xl font-bold">4.</div>
                 <div>
-                  <h3 class="font-bold text-xl mb-1 text-blue-800">Nabehandeling (Optioneel)</h3>
-                  <p>Na het reinigen adviseren we vaak een nabehandeling. Dit kan impregneren zijn, wat het dak
+                  <h3 class="font-bold text-xl mb-1 text-blue-800">Nabehandeling en Bescherming (Optioneel)</h3> <p>Na het reinigen adviseren we vaak een nabehandeling. Dit kan impregneren zijn, wat het dak
                     waterafstotend maakt, of het aanbrengen van een speciale dakcoating. Deze behandelingen versterken
                     het oppervlak, gaan nieuwe mos- en algengroei tegen, verlengen de levensduur en houden uw dak langer
                     schoon.</p>
@@ -219,9 +214,8 @@
           </ol>
 
           <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-            <i class="fas fa-leaf text-green-600"></i> Kwaliteit en Milieuvriendelijkheid
-          </h2>
-          <p class="text-lg">
+            <i class="fas fa-leaf text-green-600"></i> Kwaliteit en Milieuvriendelijkheid Gegarandeerd
+          </h2> <p class="text-lg">
             Bij Dakreiniging LM staat kwaliteit hoog in het vaandel. We gebruiken uitsluitend milieuvriendelijke
             reinigingsmiddelen die effectief zijn tegen mos en algen, maar veilig voor uw dak, uw tuin en de omgeving.
             U krijgt van ons bovendien persoonlijk advies over hoe u nieuwe mosgroei kunt voorkomen en het onderhoud
@@ -233,8 +227,7 @@
           </p>
 
           <div class="text-center mt-16">
-            <h3 class="text-2xl font-bold text-blue-900 mb-6">Benieuwd naar de kosten voor uw dakreiniging?</h3>
-            <a href="/#contact"
+            <h3 class="text-2xl font-bold text-blue-900 mb-6">Benieuwd naar de kosten voor uw dakreiniging? Vraag een offerte aan!</h3> <a href="/#contact"
               class="inline-block bg-blue-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition duration-300 shadow-lg text-xl">
               Vraag nu een vrijblijvende offerte aan <i class="fas fa-arrow-right ml-2"></i>
             </a>
@@ -255,9 +248,9 @@
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
         <div class="text-center">
-          <h4 class="font-bold text-lg">Dakwerken LM</h4>
-          <h4 class="font-bold text-lg mb-2">Dakherstellingen LM</h4>
-          <p>&copy; 2025 Alle rechten voorbehouden</p>
+          <h4 class="font-bold text-lg" itemprop="name">Dakwerken LM</h4>
+          <h4 class="font-bold text-lg mb-2" itemprop="name">Dakherstellingen LM</h4>
+          <p>&copy; <span itemprop="copyrightYear">2025</span> Alle rechten voorbehouden</p>
           <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
             <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
             <a href="/algemene-voorwaarden.html" class="underline hover:text-blue-200 transition">Algemene
@@ -266,8 +259,8 @@
         </div>
         <div class="text-center">
           <h4 class="font-semibold mb-2">Contact</h4>
-          <p class="mb-2"><i class="fas fa-envelope mr-2"></i>info@dakreiniginglm.be</p>
-          <p><a href="tel:+32473671944"><i class="fas fa-phone mr-2"></i>&plus;32 473 67 19 44</a></p>
+          <p class="mb-2"><i class="fas fa-envelope mr-2"></i><span itemprop="email">info@dakreiniginglm.be</span></p>
+          <p><a href="tel:+32473671944"><i class="fas fa-phone mr-2"></i><span itemprop="telephone">&plus;32 473 67 19 44</span></a></p>
         </div>
         <div class="text-center">
           <p class="text-white"><a href="https://linkedin.com/in/michielve" target="_blank" class="hover:underline">Made
@@ -277,93 +270,118 @@
     </div>
   </footer>
 
-
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
   <script src="/assets/js/bundle-sub.js?v=20250718" defer></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Service",
-      "serviceType": "Dakreiniging & Ontmossen",
-      "name": "Dakreiniging & Ontmossen door Dakreiniging LM",
-      "description": "Professionele reiniging, ontmossen en coaten van hellende en platte daken in de regio Herentals en Groot-Leuven. Verwijder mos, algen en vuil voor een langere levensduur van uw dak.",
-      "provider": {
-        "@type": "LocalBusiness",
-        "name": "Dakreiniging LM",
-        "image": "https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png",
-        "url": "https://www.dakreiniginglm.be",
-        "telephone": "+32 473 67 19 44",
-        "address": {
-          "@type": "PostalAddress",
-          "addressLocality": "Herentals",
-          "postalCode": "2200",
-          "addressCountry": "BE"
-        }
-      },
-      "areaServed": [
-          { "@type": "AdministrativeArea", "name": "Leuven" },
-          { "@type": "AdministrativeArea", "name": "Bierbeek" },
-          { "@type": "AdministrativeArea", "name": "Boutersem" },
-          { "@type": "AdministrativeArea", "name": "Lubbeek" },
-          { "@type": "AdministrativeArea", "name": "Holsbeek" },
-          { "@type": "AdministrativeArea", "name": "Rotselaar" },
-          { "@type": "AdministrativeArea", "name": "Herent" },
-          { "@type": "AdministrativeArea", "name": "Haacht" },
-          { "@type": "AdministrativeArea", "name": "Keerbergen" },
-          { "@type": "AdministrativeArea", "name": "Aarschot" },
-          { "@type": "AdministrativeArea", "name": "Diest" },
-          { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
-          { "@type": "AdministrativeArea", "name": "Bekkevoort" },
-          { "@type": "AdministrativeArea", "name": "Kortenaken" },
-          { "@type": "AdministrativeArea", "name": "Glabeek" },
-          { "@type": "AdministrativeArea", "name": "Linter" },
-          { "@type": "AdministrativeArea", "name": "Tienen" },
-          { "@type": "AdministrativeArea", "name": "Herentals" }
-      ],
-      "url": "https://www.dakreiniginglm.be/dakreiniging-ontmossen.html",
-      "hasOfferCatalog": {
-        "@type": "OfferCatalog",
-        "name": "Dakreiniging Services",
-        "itemListElement": [
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Dakreiniging Hellende Daken"
+      "@graph": [
+        {
+          "@type": "Service",
+          "serviceType": "Dakreiniging & Ontmossen",
+          "name": "Professionele Dakreiniging & Ontmossen",
+          "description": "Professionele reiniging, ontmossen en coaten van hellende en platte daken in de regio Herentals en Groot-Leuven. Verwijder mos, algen en vuil voor een langere levensduur van uw dak.",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "Dakherstellingen LM",
+            "image": "https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png",
+            "url": "https://www.dakherstellingenlm.be/diensten/dakreiniging-ontmossen.html",
+            "telephone": "+32 473 67 19 44",
+            "address": {
+              "@type": "PostalAddress",
+              "addressLocality": "Herentals",
+              "postalCode": "2200",
+              "addressCountry": "BE"
             }
           },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Dakreiniging Platte Daken"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Dak Ontmossen"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Dak Coaten"
-            }
-          },
-          {
-            "@type": "Offer",
-            "itemOffered": {
-              "@type": "Service",
-              "name": "Dakgoot Reiniging"
-            }
+          "areaServed": [
+            { "@type": "AdministrativeArea", "name": "Leuven" },
+            { "@type": "AdministrativeArea", "name": "Bierbeek" },
+            { "@type": "AdministrativeArea", "name": "Boutersem" },
+            { "@type": "AdministrativeArea", "name": "Lubbeek" },
+            { "@type": "AdministrativeArea", "name": "Holsbeek" },
+            { "@type": "AdministrativeArea", "name": "Rotselaar" },
+            { "@type": "AdministrativeArea", "name": "Herent" },
+            { "@type": "AdministrativeArea", "name": "Haacht" },
+            { "@type": "AdministrativeArea", "name": "Keerbergen" },
+            { "@type": "AdministrativeArea", "name": "Aarschot" },
+            { "@type": "AdministrativeArea", "name": "Diest" },
+            { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
+            { "@type": "AdministrativeArea", "name": "Bekkevoort" },
+            { "@type": "AdministrativeArea", "name": "Kortenaken" },
+            { "@type": "AdministrativeArea", "name": "Glabeek" },
+            { "@type": "AdministrativeArea", "name": "Linter" },
+            { "@type": "AdministrativeArea", "name": "Tienen" },
+            { "@type": "AdministrativeArea", "name": "Herentals" }
+          ],
+          "offers": {
+            "@type": "OfferCatalog",
+            "name": "Dakreiniging Services",
+            "itemListElement": [
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Dakreiniging Hellende Daken"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Dakreiniging Platte Daken"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Dak Ontmossen"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Dak Coaten"
+                }
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Service",
+                  "name": "Dakgoot Reiniging"
+                }
+              }
+            ]
           }
-        ]
-      }
+        },
+        {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.dakherstellingenlm.be/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Onze Diensten",
+              "item": "https://www.dakherstellingenlm.be/#diensten"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Dakreiniging & Ontmossen",
+              "item": "https://www.dakherstellingenlm.be/diensten/dakreiniging-ontmossen.html"
+            }
+          ]
+        }
+      ]
     }
-    </script>
+  </script>
 </body>
 
 </html>
