--- a/diensten/dakherstellingen-hellende-daken.html
+++ b/diensten/dakherstellingen-hellende-daken.html
@@ -6,33 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Language" content="nl">
 
-    <title>Dakherstellingen Hellende Daken Leuven & Herentals | Lekkage Oplossen | Dakherstellingen LM</title>
+    <title>Dakherstellingen Hellende Daken in Leuven & Herentals | Lekkage Oplossen | Dakwerken LM</title>
     <meta name="description"
-        content="Snelle en professionele dakherstellingen voor hellende daken in Leuven, Herentals en heel Vlaams-Brabant. Specialist in lekkage opsporen, stormschade en slijtage herstel. Vraag een gratis dakcontrole aan bij Dakherstellingen LM!" />
+        content="Expert in snelle en professionele dakherstellingen voor hellende daken in Groot-Leuven en Herentals. Wij lossen lekkages, stormschade en slijtage duurzaam op. Vraag uw gratis dakinspectie aan!" />
+    <meta name="keywords"
+        content="dakherstellingen hellende daken, dakwerken leuven, dakreiniging, ontmossen, lekkage opsporen, stormschade dak, dakreparatie leuven, dakreparatie herentals, hellend dak herstellen" />
     <meta name="author" content="Dakherstellingen LM" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1D4ED8" />
 
-    <link rel="canonical" href="https://www.dakherstellingenlm.be/dakherstellingen-hellende-daken.html">
+    <link rel="canonical" href="https://www.dakherstellingenlm.be/diensten/dakherstellingen-hellende-daken.html">
 
     <meta property="og:title" content="Dakherstellingen Hellende Daken in Leuven & Herentals | Dakherstellingen LM" />
     <meta property="og:description"
-        content="Uw specialist voor dakherstellingen aan hellende daken in de regio Groot-Leuven en Herentals. Snelle service bij lekkages en stormschade herstel." />
+        content="Uw specialist voor spoed- en algemene dakherstellingen aan hellende daken in de regio Groot-Leuven en Herentals. Snelle service bij lekkages en stormschade." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.dakherstellingenlm.be/dakherstellingen-hellende-daken.html" />
+    <meta property="og:url" content="https://www.dakherstellingenlm.be/diensten/dakherstellingen-hellende-daken.html" />
     <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/dak.webp" />
     <meta property="og:site_name" content="Dakherstellingen LM" />
+    <meta property="og:locale" content="nl_BE" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Dakherstellingen Hellende Daken Leuven | Dakherstellingen LM" />
+    <meta name="twitter:title" content="Dakherstellingen Hellende Daken | Lekkages & Stormschade in Vlaams-Brabant" />
     <meta name="twitter:description"
-        content="Snel en vakkundig uw lekkage of stormschade aan hellend dak hersteld in Vlaams-Brabant. Vraag uw gratis dakcontrole aan!" />
-    <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+        content="Snel en vakkundig uw lekkage of stormschade aan hellend dak hersteld in Vlaams-Brabant door Dakherstellingen LM. Vraag uw gratis dakcontrole aan!" />
+    <meta name="twitter:image" content="https://www.dakherstellingenlm.be/assets/dak.webp" /> 
+    <meta name="twitter:site" content="@DakwerkenLM" /> 
+    <meta name="twitter:creator" content="@DakwerkenLM" /> 
+
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
+    <meta name="apple-mobile-web-app-title" content="Dakherstellingen-LM" /> 
     <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
     <link rel="stylesheet" href="/assets/css/output.css?v=20250724">
@@ -95,7 +101,7 @@
                         class="hidden md:absolute md:-left-12 mt-0 md:mt-2 bg-white md:border md:border-blue-200 md:w-68 z-40 space-y-1 text-sm text-blue-800 transition transform origin-top opacity-0 scale-95 md:rounded-md md:shadow-lg">
                         <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
                             <a href="/diensten/dakherstellingen-hellende-daken.html"
-                                class="group relative inline-block pb-1 w-full">
+                                class="group relative inline-block pb-1 w-full font-bold">
                                 <span class="group-hover:text-blue-900 transition">Dakherstellingen Hellende
                                     Daken</span>
                                 <span
@@ -142,11 +148,10 @@
     <main role="main">
         <section class="relative bg-cover bg-right h-80 md:h-96"
             style="background-image: url('/assets/img/banner/herstelling_hellend.webp?v=20250714');">
-            <div class="absolute inset-0 bg-black/50 flex items-center justify-center">
+            <div class="absolute inset-0 bg-black/50 flex items-center justify-center" aria-label="Afbeelding van een hersteld hellend dak met dakpannen">
                 <h1
                     class="text-4xl sm:text-5xl md:text-6xl font-bold text-white text-center drop-shadow-lg pt-24 md:pt-0">
-                    Dakherstellingen Hellende Daken</h1>
-            </div>
+                    Dakherstellingen Hellende Daken</h1> </div>
         </section>
 
         <section class="py-16 sm:py-24 px-6 bg-white">
@@ -203,13 +208,13 @@
                     </ul>
 
                     <h2 class="text-2xl sm:text-3xl font-bold text-blue-800 mt-12 mb-6 flex items-center gap-3">
-                        Extra Services
+                        Extra Services voor Dakwerken
                     </h2>
                     <ul class="list-none space-y-4 text-lg">
                         <li class="flex items-start">
                             <i class="fas fa-triangle-exclamation mr-3 text-red-800 text-xl flex-shrink-0 mt-1"></i>
                             <div>
-                                <h3 class="font-bold text-xl mb-1 text-blue-800">Noodherstellingen</h3>
+                                <h3 class="font-bold text-xl mb-1 text-blue-800">Noodherstellingen in Leuven & Herentals</h3>
                                 <p>Bij acute problemen zoals zware stormschade of plotse lekkages behandelen wij
                                     noodherstellingen met de hoogste prioriteit. Wij staan snel ter plaatse om de ergste
                                     schade te beperken en uw woning te beveiligen.</p>
@@ -228,15 +233,15 @@
 
                     <p class="mt-6 text-lg">
                         Bij ons komt u niet voor verrassingen te staan. Wij houden van transparante communicatie en een
-                        persoonlijke aanpak. Uw dak is bij Dakherstellingen LM in goede handen; we leveren vakmanschap met
+                        persoonlijke aanpak. Uw dak is bij Dakherstellingen LM in goede handen, we leveren vakmanschap met
                         de hoogste kwaliteitsstandaarden.
                     </p>
 
                     <div class="text-center mt-16">
                         <h3 class="text-2xl font-bold text-blue-900 mb-6">Problemen met uw hellend dak?</h3>
                         <a href="/#contact"
-                            class="inline-block bg-blue-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition duration-300 shadow-lg text-xl">
-                            Vraag nu een vrijblijvende offerte aan <i class="fas fa-arrow-right ml-2"></i>
+                            class="inline-block bg-blue-800 text-white font-semibold px-8 py-4 rounded-lg hover:bg-blue-700 transition duration-300 shadow-lg text-xl"
+                            aria-label="Vraag nu een vrijblijvende offerte aan voor dakherstellingen"> Vraag nu een vrijblijvende offerte aan <i class="fas fa-arrow-right ml-2"></i>
                         </a>
                     </div>
                 </div>
@@ -267,7 +272,7 @@
                 <div class="text-center">
                     <h4 class="font-semibold mb-2">Contact</h4>
                     <p class="mb-2"><i class="fas fa-envelope mr-2"></i>info@dakreiniginglm.be</p>
-                    <p><a href="tel:+32473671944"><i class="fas fa-phone mr-2"></i>&plus;32 473 67 19 44</a></p>
+                    <p><a href="tel:+32473671944" aria-label="Bel Dakherstellingen LM"><i class="fas fa-phone mr-2"></i>&plus;32 473 67 19 44</a></p>
                 </div>
                 <div class="text-center">
                     <p class="text-white"><a href="https://linkedin.com/in/michielve" target="_blank"
@@ -282,87 +287,93 @@
     <script src="/assets/js/bundle-sub.js?v=20250718" defer></script>
     <script type="application/ld+json">
         {
-          "@context": "https://schema.org",
-          "@type": "Service",
-          "serviceType": "Dakherstellingen Hellende Daken in Leuven & Herentals",
-          "name": "Dakherstellingen Hellende Daken: Lekkage & Stormschade door Dakherstellingen LM",
-          "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Groot-Leuven, Herentals en Vlaams-Brabant. Inclusief gratis dakcontrole.",
-          "url": "https://www.dakherstellingenlm.be/dakherstellingen-hellende-daken.html",
-          "provider": {
-            "@type": "LocalBusiness",
-            "@id": "https://www.dakherstellingenlm.be/#organization",
-            "name": "Dakherstellingen LM",
-            "image": "https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png",
-            "url": "https://www.dakherstellingenlm.be",
-            "telephone": "+32 473 67 19 44",
-            "address": {
-              "@type": "PostalAddress",
-              "addressLocality": "Herentals",
-              "postalCode": "2200",
-              "addressCountry": "BE"
-            },
-            "priceRange": "€€",
-            "sameAs": [
-              "https://www.linkedin.com/in/michielve"
+            "@context": "https://schema.org",
+            "@graph": [
+                {
+                    "@type": "LocalBusiness",
+                    "@id": "https://www.dakherstellingenlm.be/#organization",
+                    "name": "Dakherstellingen LM",
+                    "image": "https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png",
+                    "url": "https://www.dakherstellingenlm.be",
+                    "telephone": "+32 473 67 19 44",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "addressLocality": "Herentals",
+                        "postalCode": "2200",
+                        "addressCountry": "BE"
+                    },
+                    "priceRange": "€€",
+                    "openingHoursSpecification": [
+                        {
+                          "@type": "OpeningHoursSpecification",
+                          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+                          "opens": "08:00",
+                          "closes": "18:00"
+                        },
+                        {
+                          "@type": "OpeningHoursSpecification",
+                          "dayOfWeek": ["Saturday", "Sunday"],
+                          "opens": "08:00",
+                          "closes": "20:00",
+                          "description": "Noodherstellingen"
+                        }
+                    ],
+                    "sameAs": [
+                      "https://www.linkedin.com/in/michielve"
+                    ]
+                },
+                {
+                    "@type": "Service",
+                    "serviceType": "Dakherstellingen aan Hellende Daken",
+                    "name": "Professionele Dakherstellingen Hellende Daken in Leuven & Herentals",
+                    "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Groot-Leuven, Herentals en Vlaams-Brabant. Inclusief gratis dakinspectie en spoeddienst.",
+                    "url": "https://www.dakherstellingenlm.be/diensten/dakherstellingen-hellende-daken.html",
+                    "provider": {
+                        "@id": "https://www.dakherstellingenlm.be/#organization"
+                    },
+                    "areaServed": [
+                        { "@type": "City", "name": "Leuven" },
+                        { "@type": "City", "name": "Herentals" },
+                        { "@type": "State", "name": "Vlaams-Brabant" }
+                    ],
+                    "hasOfferCatalog": {
+                        "@type": "OfferCatalog",
+                        "name": "Hellende Dakherstellingen Services",
+                        "itemListElement": [
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Spoedservice voor Lekkage Opsporen Hellend Dak"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Herstel van Stormschade aan Hellende Daken"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Vervanging van Dakpannen en Slijtage Herstel"
+                                }
+                            },
+                            {
+                                "@type": "Offer",
+                                "itemOffered": {
+                                    "@type": "Service",
+                                    "name": "Gratis Preventieve Dakinspectie"
+                                }
+                            }
+                        ]
+                    }
+                }
             ]
-          },
-            "areaServed": [
-              { "@type": "AdministrativeArea", "name": "Leuven" },
-              { "@type": "AdministrativeArea", "name": "Bierbeek" },
-              { "@type": "AdministrativeArea", "name": "Boutersem" },
-              { "@type": "AdministrativeArea", "name": "Lubbeek" },
-              { "@type": "AdministrativeArea", "name": "Holsbeek" },
-              { "@type": "AdministrativeArea", "name": "Rotselaar" },
-              { "@type": "AdministrativeArea", "name": "Herent" },
-              { "@type": "AdministrativeArea", "name": "Haacht" },
-              { "@type": "AdministrativeArea", "name": "Keerbergen" },
-              { "@type": "AdministrativeArea", "name": "Aarschot" },
-              { "@type": "AdministrativeArea", "name": "Diest" },
-              { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
-              { "@type": "AdministrativeArea", "name": "Bekkevoort" },
-              { "@type": "AdministrativeArea", "name": "Kortenaken" },
-              { "@type": "AdministrativeArea", "name": "Glabeek" },
-              { "@type": "AdministrativeArea", "name": "Linter" },
-              { "@type": "AdministrativeArea", "name": "Tienen" },
-              { "@type": "AdministrativeArea", "name": "Herentals" }
-            ],
-          "hasOfferCatalog": {
-            "@type": "OfferCatalog",
-            "name": "Dakherstellingen Hellende Daken Services",
-            "itemListElement": [
-              {
-                "@type": "Offer",
-                "itemOffered": {
-                  "@type": "Service",
-                  "name": "Lekkage opsporen hellend dak"
-                }
-              },
-              {
-                "@type": "Offer",
-                "itemOffered": {
-                  "@type": "Service",
-                  "name": "Stormschade herstel hellend dak"
-                }
-              },
-              {
-                "@type": "Offer",
-                "itemOffered": {
-                  "@type": "Service",
-                  "name": "Slijtage herstel dakpannen"
-                }
-              },
-              {
-                "@type": "Offer",
-                "itemOffered": {
-                  "@type": "Service",
-                  "name": "Gratis dakcontrole"
-                }
-              }
-            ]
-          }
         }
-</script>
-
+    </script>
 </body>
 
 </html>
